--- a/EntropyServer/EntropyServer.Domain/EntropyServer.Domain.csproj
+++ b/EntropyServer/EntropyServer.Domain/EntropyServer.Domain.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging.Abstractions" Version="3.1.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EntropyServer.Infrastructure\EntropyServer.Infrastructure.csproj" />
+  </ItemGroup>
+
 </Project>
