--- a/EntropyServer/EntropyServer.Domain/EntropyServer.Domain.csproj
+++ b/EntropyServer/EntropyServer.Domain/EntropyServer.Domain.csproj
@@ -9,7 +9,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\EntropyServer.Infrastructure\EntropyServer.Infrastructure.csproj" />
+    <ProjectReference Include="..\EntropyServer.Extensions\EntropyServer.Extensions.csproj" />
   </ItemGroup>
 
 </Project>
