--- a/EntropyServer/EntropyServer.Infrastructure/EntropyServer.Infrastructure.csproj
+++ b/EntropyServer/EntropyServer.Infrastructure/EntropyServer.Infrastructure.csproj
@@ -4,4 +4,12 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Hosting.Abstractions" Version="3.1.9" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\EntropyServer.Domain\EntropyServer.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
