--- a/EntropyServer/EntropyServer/EntropyServer.csproj
+++ b/EntropyServer/EntropyServer/EntropyServer.csproj
@@ -25,6 +25,10 @@
     <ProjectReference Include="..\EntropyServer.Infrastructure\EntropyServer.Infrastructure.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="ClientApp\src\NewFolder\" />
+  </ItemGroup>
+
   <Target Name="DebugEnsureNodeEnv" BeforeTargets="Build" Condition=" '$(Configuration)' == 'Debug' And !Exists('$(SpaRoot)node_modules') ">
     <!-- Ensure Node.js is installed -->
     <Exec Command="node --version" ContinueOnError="true">
